--- a/expander.html
+++ b/expander.html
@@ -57,7 +57,7 @@
 
 <div class="custom-expander">
   <input type="checkbox" id="expander-toggle" class="expander-toggle" />
-  <label for="expander-toggle">אודות האפליקציה</label>
+  <label for="expander-toggle">אודות</label>
   <div class="expander-content">
     <h2>RAG (Retrieval-Augmented Generation) בקצרה:</h2>
     <p>
@@ -65,28 +65,23 @@
       ולהשתמש בו ליצירת תשובות מותאמות אישית. זה מבטיח דיוק, רלוונטיות ועדכניות
       בתקשורת עם המשתמשים שלך.
     </p>
-    <h2>הרעיון של אפליקציה זו:</h2>
+    <h2>אפליקציה זו:</h2>
     <p>
-      אפליקציה זו מציעה לך פתרון חדשני לניצול המידע הפנים-ארגוני שלך בצורה יעילה
-      ונגישה. היא מאפשרת לך ליצור צ'אטבוט מותאם אישית, המסוגל לשוחח עם הלקוחות,
-      העובדים או בעלי העניין שלך, תוך שימוש במידע הייחודי של הארגון שלך.
+      מציעה פתרון חדשני לניצול המידע הפנים-ארגוני בצורה יעילה ונגישה. היא מאפשרת
+      לכם ליצור צ'אטבוט מותאם אישית, המסוגל לשוחח עם הלקוחות, העובדים או בעלי
+      העניין, תוך שימוש במידע הייחודי שלכם.
     </p>
     <h2>יתרונות עבור הארגון שלך:</h2>
     <ol>
+      <li>נגישות מידע 24/7: אפשרות גישה למידע בכל עת, ללא תלות בשעות עבודה.</li>
+      <li>שיפור השירות: מתן מענה מהיר ומדויק לשאלות נפוצות.</li>
+      <li>יעילות תפעולית: הפחת עומס על צוותי התמיכה ומשאבי אנוש.</li>
       <li>
-        נגישות מידע 24/7: אפשר לך לספק גישה למידע ארגוני בכל עת, ללא תלות בשעות
-        עבודה.
+        עדכניות: עדכון בסיס הידע בקלות ובמהירות, כך שהמידע יהיה תמיד עדכני.
       </li>
-      <li>
-        שיפור שירות לקוחות: ספק מענה מהיר ומדויק לשאלות נפוצות של הלקוחות שלך.
-      </li>
-      <li>יעילות תפעולית: הפחת עומס על צוותי התמיכה ומשאבי האנוש שלך.</li>
-      <li>עדכניות: עדכן בקלות את בסיס הידע, כך שהמידע שלך תמיד יהיה עדכני.</li>
-      <li>
-        התאמה אישית: התאם את ה-צ'אטבוט לצרכים ולטון הייחודיים של הארגון שלך.
-      </li>
+      <li>התאמה אישית: התאמת ה-צ'אטבוט לצרכים הייחודיים שלכם.</li>
     </ol>
-    <h2>שימושים פוטנציאליים בארגון שלך:</h2>
+    <h2>שימושים פוטנציאליים בארגון:</h2>
     <ul>
       <li>מידע על מוצרים ושירותים</li>
       <li>תמיכה טכנית ופתרון בעיות</li>
@@ -95,13 +90,66 @@
       <li>מענה לשאלות נפוצות של לקוחות או עובדים</li>
     </ul>
     <p>
-      באמצעות אפליקציה זו, תוכל להפוך את המידע הפנימי שלך למשאב נגיש ובעל ערך,
-      המשפר את התקשורת, היעילות והשירות בארגון שלך. זוהי הזדמנות עבורך להישאר
-      בחזית הטכנולוגיה ולספק חווית משתמש מתקדמת ואיכותית ללקוחות ולעובדים שלך.
+      באמצעות אפליקציה זו, תוכלו להפוך את המידע הפנימי למשאב נגיש ובעל ערך,
+      המשפר את התקשורת, היעילות והשירות שלכם. זוהי הזדמנות עבורך להישאר בחזית
+      הטכנולוגיה ולספק חווית משתמש מתקדמת ואיכותית ללקוחות ולעובדים שלכם.
     </p>
     <p>
-      השקע היום ב-צ'אטבוט חכם ומותאם אישית, וראה כיצד הארגון שלך מתייעל, משפר את
+      השקיעו היום ב-צ'אטבוט חכם ומותאם אישית, וראו כיצד הארגון מתייעל, משפר את
       השירות ומגדיל את שביעות הרצון של הלקוחות והעובדים.
+    </p>
+    <p>
+      <a
+        href="https://linktr.ee/sagib?lt_utm_source=lt_share_link#373198503"
+        target="_blank"
+        ><img
+          src="https://img.shields.io/badge/linktree-white?style=for-the-badge&logo=linktree&logoColor=43E55E"
+          alt="Linktree"
+      /></a>
+      <a href="https://www.facebook.com/sagi.baron" target="_blank"
+        ><img
+          src="https://img.shields.io/badge/facebook-white?style=for-the-badge&logo=facebook&logoColor=0866FF"
+          alt="Facebook"
+      /></a>
+      <a href="https://www.linkedin.com/in/sagi-bar-on" target="_blank"
+        ><img
+          src="https://img.shields.io/badge/linkedin-white?style=for-the-badge&logo=linkedin&logoColor=0A66C2"
+          alt="LinkedIn"
+      /></a>
+      <a href="https://api.whatsapp.com/send?phone=972549995050" target="_blank"
+        ><img
+          src="https://img.shields.io/badge/CONTACT_ME-white?style=for-the-badge&logo=whatsapp&logoColor=25D366"
+          alt="Contact Me"
+      /></a>
+      <a
+        href="https://whatsapp.com/channel/0029Vaj33VkEawds11JP9o1c"
+        target="_blank"
+        ><img
+          src="https://img.shields.io/badge/AI_TIPS_&_TRICKS_CHANNEL-white?style=for-the-badge&logo=whatsapp&logoColor=25D366"
+          alt="AI Tips & Tricks Channel"
+      /></a>
+      <a
+        href="https://whatsapp.com/channel/0029Vaj33VkEawds11JP9o1c"
+        target="_blank"
+        ><img
+          src="https://img.shields.io/badge/AI_DISCUSSION_GROUP-white?style=for-the-badge&logo=whatsapp&logoColor=25D366"
+          alt="AI Discussion Group"
+      /></a>
+      <a href="https://www.youtube.com/@SagiBaron" target="_blank"
+        ><img
+          src="https://img.shields.io/badge/Subscribe_to_my_YouTube_channel-white?style=for-the-badge&logo=youtube&logoColor=FF0000"
+          alt="Subscribe"
+      /></a>
+      <a href="mailto:sagi.baron76@gmail.com"
+        ><img
+          src="https://img.shields.io/badge/email_me-white?style=for-the-badge&logo=gmail&logoColor=EA4335"
+          alt="Email Me"
+      /></a>
+      <a href="https://buymeacoffee.com/sagibar" target="_blank"
+        ><img
+          src="https://img.shields.io/badge/Buy_Me_A_Beer-white?style=for-the-badge&logo=buymeacoffee&logoColor=FFDD00"
+          alt="Buy Me A Beer"
+      /></a>
     </p>
   </div>
 </div>
